fixing gap between members images

--- a/frontend/src/assets/styles/cmps/board/TaskList.scss
+++ b/frontend/src/assets/styles/cmps/board/TaskList.scss
@@ -154,7 +154,6 @@
 .members-icons .members-img {
   display: flex;
   align-items: center;
-  gap: 3px;
   flex-wrap: wrap;
 }
 
